# Real-Time-Video-Filtering

./: CMakeLists.txt  ExtensionaddCaption.cpp  ExtensionaddFrame.cpp  README.txt  faceDetect.h  filter.cpp  filter.h  imgDisplay.cpp  vidDisplay.cpp
